# random-roll

./: README.md  随机点名系统.md
frontend-demo/: preview.html  result.html
roll-backend/: .gitignore  pyproject.toml  run.sh
roll-backend/database/: create.py  table.py
roll-backend/points/: rank.py
roll-backend/roll/: random.py  result.py
roll-backend/server/: decorators.py  vercel.py  verdata.py
roll-backend/students/: export.py  import.py  list_all.py
roll-backend/students/delete/: all.py  one.py
roll-backend/user/: login.py
roll-frontend/: README.md  START.md  package.json  pnpm-lock.yaml  tsconfig.json
roll-frontend/src/: App.vue  main.ts  manifest.json  pages.json
roll-frontend/src/components/: CustomTabBar.vue  ImportModal.vue  SettingsModal.vue
roll-frontend/src/pages/leaderboard/: leaderboard.vue
roll-frontend/src/pages/rollcall/: rollcall.vue
roll-frontend/src/pages/roster/: roster.vue
roll-frontend/src/pages/statistics/: statistics.vue
roll-frontend/src/utils/: api.ts  storage.ts
